--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,7 @@ ACLOCAL_AMFLAGS = -I m4
 LIB_ISL = $(ISL_LA) @ISL_LIBS@
 LIB_PET = $(PET_LA) @PET_LIBS@
 
-AM_CPPFLAGS = @ISL_CFLAGS@ @PET_CFLAGS@
+AM_CPPFLAGS = @ISL_CFLAGS@ @PET_CFLAGS@ -I$(srcdir)/isl
 LDADD = $(LIB_PET) $(LIB_ISL)
 
 bin_PROGRAMS = ppcg
