--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .libs/
 Makefile
 Makefile.in
+*.o
+*.lo
 aclocal.m4
 autom4te.cache/
 compile
@@ -26,3 +28,35 @@ test-driver
 
 opencl_test.sh
 polybench_test.sh
+isl/codegen_test.sh
+isl/flow_test.sh
+isl/include/isl/cpp-checked-conversion.h
+isl/include/isl/cpp-checked.h
+isl/include/isl/cpp.h
+isl/interface/extract_interface
+isl/isl_codegen
+isl/isl_flow
+isl/isl_flow_cmp
+isl/isl_schedule
+isl/isl_schedule_cmp
+isl/isl_test_cpp
+isl/isl_test_cpp-checked
+isl/isl_test_cpp-checked-conversion
+isl/isl_test_int
+isl/schedule_test.sh
+pet/all.c
+pet/codegen_test.sh
+pet/config.h
+pet/libdep.a
+pet/libpet.la
+pet/pet
+pet/pet-uninstalled.pc
+pet/pet-uninstalled.sh
+pet/pet.pc
+pet/pet.pc.in
+pet/pet_check_code
+pet/pet_codegen
+pet/pet_scop_cmp
+pet/pet_test.sh
+pet/stamp-h1
+
